; ModuleID = '/home/carl/AnghaBench/lede/target/linux/oxnas/files/drivers/ata/extr_sata_oxnas.c_sata_oxnas_postreset.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/oxnas/files/drivers/ata/extr_sata_oxnas.c_sata_oxnas_postreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_link = type { %struct.ata_port* }
%struct.ata_port = type { %struct.TYPE_5__, %struct.TYPE_4__* }
%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_4__ = type { i32*, %struct.sata_oxnas_host_priv* }
%struct.sata_oxnas_host_priv = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"ENTER\0A\00", align 1
@ATA_DEV_NONE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"EXIT, no device\0A\00", align 1
@ATA_MAX_DEVICES = common dso_local global i32 0, align 4
@ATA_DEV_ATA = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [6 x i8] c"EXIT\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ata_link*, i32*)* @sata_oxnas_postreset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sata_oxnas_postreset(%struct.ata_link* %0, i32* %1) #0 {
  %3 = alloca %struct.ata_link*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ata_port*, align 8
  %6 = alloca %struct.sata_oxnas_host_priv*, align 8
  %7 = alloca i32, align 4
  store %struct.ata_link* %0, %struct.ata_link** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.ata_link*, %struct.ata_link** %3, align 8
  %9 = getelementptr inbounds %struct.ata_link, %struct.ata_link* %8, i32 0, i32 0
  %10 = load %struct.ata_port*, %struct.ata_port** %9, align 8
  store %struct.ata_port* %10, %struct.ata_port** %5, align 8
  %11 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %12 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %11, i32 0, i32 1
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load %struct.sata_oxnas_host_priv*, %struct.sata_oxnas_host_priv** %14, align 8
  store %struct.sata_oxnas_host_priv* %15, %struct.sata_oxnas_host_priv** %6, align 8
  %16 = call i32 @DPRINTK(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.ata_link*, %struct.ata_link** %3, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @ata_std_postreset(%struct.ata_link* %17, i32* %18)
  %20 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %21 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %20, i32 0, i32 1
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @sata_oxnas_link_write(i32 %26, i32 12, i32 196611)
  %28 = load %struct.sata_oxnas_host_priv*, %struct.sata_oxnas_host_priv** %6, align 8
  %29 = getelementptr inbounds %struct.sata_oxnas_host_priv, %struct.sata_oxnas_host_priv* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = icmp sgt i32 %30, 1
  br i1 %31, label %32, label %41

32:                                               ; preds = %2
  %33 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %34 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %33, i32 0, i32 1
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 1
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @sata_oxnas_link_write(i32 %39, i32 12, i32 196611)
  br label %41

41:                                               ; preds = %32, %2
  %42 = load i32*, i32** %4, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 0
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* @ATA_DEV_NONE, align 4
  %46 = icmp eq i32 %44, %45
  br i1 %46, label %47, label %55

47:                                               ; preds = %41
  %48 = load i32*, i32** %4, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 1
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* @ATA_DEV_NONE, align 4
  %52 = icmp eq i32 %50, %51
  br i1 %52, label %53, label %55

53:                                               ; preds = %47
  %54 = call i32 @DPRINTK(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %87

55:                                               ; preds = %47, %41
  store i32 0, i32* %7, align 4
  br label %56

56:                                               ; preds = %82, %55
  %57 = load i32, i32* %7, align 4
  %58 = load i32, i32* @ATA_MAX_DEVICES, align 4
  %59 = icmp ult i32 %57, %58
  br i1 %59, label %60, label %85

60:                                               ; preds = %56
  %61 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %62 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %61, i32 0, i32 0
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %62, i32 0, i32 0
  %64 = load %struct.TYPE_6__*, %struct.TYPE_6__** %63, align 8
  %65 = load i32, i32* %7, align 4
  %66 = zext i32 %65 to i64
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %64, i64 %66
  %68 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = load i64, i64* @ATA_DEV_ATA, align 8
  %71 = icmp eq i64 %69, %70
  br i1 %71, label %72, label %81

72:                                               ; preds = %60
  %73 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %74 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %73, i32 0, i32 0
  %75 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %74, i32 0, i32 0
  %76 = load %struct.TYPE_6__*, %struct.TYPE_6__** %75, align 8
  %77 = load i32, i32* %7, align 4
  %78 = zext i32 %77 to i64
  %79 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %76, i64 %78
  %80 = call i32 @sata_oxnas_dev_config(%struct.TYPE_6__* %79)
  br label %81

81:                                               ; preds = %72, %60
  br label %82

82:                                               ; preds = %81
  %83 = load i32, i32* %7, align 4
  %84 = add i32 %83, 1
  store i32 %84, i32* %7, align 4
  br label %56

85:                                               ; preds = %56
  %86 = call i32 @DPRINTK(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %87

87:                                               ; preds = %85, %53
  ret void
}

declare dso_local i32 @DPRINTK(i8*) #1

declare dso_local i32 @ata_std_postreset(%struct.ata_link*, i32*) #1

declare dso_local i32 @sata_oxnas_link_write(i32, i32, i32) #1

declare dso_local i32 @sata_oxnas_dev_config(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
